# maobu-fetch

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
docs/superpowers/plans/: 2026-07-19-finder-layout-redesign.md
docs/superpowers/specs/: 2026-07-19-finder-layout-redesign.md
extension/: build.mjs  manifest.json  package.json
extension/src/: auth-download.js  background.js  bridge_tasks.test.js  content.js  interceptor.js  interceptor.test.js  media-selection.js  media-selection.test.js  options.css  options.html  options.js  popup.css  popup.html  popup.js  protocol.js  protocol.test.js  rules.js  rules.test.js
scripts/: fetch-media-tools.ps1  generate_readme_screenshots.cjs  parallel_range_bench.mjs  range_e2e.mjs  range_test_server.py  run-dev.cmd
src/: App.tsx  ErrorBoundary.tsx  api.ts  i18n.test.ts  i18n.ts  main.tsx  priority.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/tools/: versions.json
src-tauri/src/: autostart.rs  bridge.rs  cache.rs  cli.rs  deep_link.rs  lib.rs  logging.rs  main.rs  manager.rs  media.rs  media_cookies.rs  media_muxer.rs  media_platforms.rs  media_tools.rs  models.rs  network_awareness.rs  portable.rs  proxy.rs  secure_storage.rs  store.rs  task_transfer.rs  tray_icon.rs  updater.rs
src-tauri/src/manager/: bandwidth.rs  category_rules.rs  completion_action.rs  diagnose.rs  duplicate.rs  filename_cleanup.rs  naming_template.rs  precheck.rs  task_template.rs
src-tauri/tests/: range_server.rs
src-tauri/windows/: app.manifest  lumaget.rc
src/components/: BackupRestoreModal.tsx  CompletionActionEditor.tsx  DiagnosisPanel.tsx  EpisodePicker.tsx  HistoryDateFilter.tsx  PowerActionControl.tsx  PrecheckPanel.tsx  Select.tsx  YouTubeCredentialsModal.tsx
src/locales/: en.json  zh-CN.json
