[package]
name = "lumaget"
version = "0.1.0"
description = "A clean-room open-source download manager"
authors = ["LumaGet contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "lumaget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
url = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
open = "5"
